# IC_Project

./: CMakeLists.txt  InstrumentCluster.qml  Main.qml  image.qrc  main.cpp  receiver.cpp  receiver.h  speedprovider.cpp  speedprovider.h
IC_Project/: CMakeLists.txt  RightCluster.qml  main.cpp
